--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "conekta-card-tokenizer": "^1.0.1",
     "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
