--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
