--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "card-validator": "^10.0.0",
     "conekta-card-tokenizer": "^1.0.1",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-hot-toast": "^2.4.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
