--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
