--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.19",
+    "@react-pdf/renderer": "^4.1.5",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -15,10 +16,12 @@
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-pdf": "^9.1.1",
     "react-query": "^3.39.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
